inter/Tests/Valid/list.intert
packagetype _plain
packagetype _code

package main _plain
	kind K_number int32
	kind K_list_of_number list of K_number
	constant C_primes K_list_of_number = { 2, 3, 5, 7, 11, 13, 17, 19 }
